# RubicsCubeSolver

./: BFSSolver.h  CMakeLists.txt  DFSSolver.h  GeniricRubicsCubeSolver.cpp  GeniricRubicsCubeSolver.h  IDAstarSolver.h  IDFSSolver.h  RubiksCube1dArray.cpp  RubiksCubeBitBoard.cpp  RubiksCube_3drep.cpp  main.cpp
PatternDatabases/: CornerDBMaker.h  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.h  PermutationIndexer.h  cmath.cpp
